--- a/frontend/core/src/main/webapp/static/app/lists/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listNotes.html
@@ -6,7 +6,7 @@
 
     <div class="animate-list-item-leave tall"
       ng-repeat="note in listInfos.array = (getFullArray())
-      | orderBy:'trans.created':true | limitTo: currentListLimitTo"
+      | orderBy:'trans.created':true | limitTo: currentListLimitTo track by note.trans.uuid"
       list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
     <div list-prompt="notes" list-prompt-infos="listInfos"></div>
   </section>
