--- a/frontend/core/src/main/webapp/static/app/main/trash.html
+++ b/frontend/core/src/main/webapp/static/app/main/trash.html
@@ -2,7 +2,8 @@
   <section class="container-content">
     <h2 class="group-heading justified row" ng-bind="allDeleted.length + ' deleted'"></h2>
 
-    <div ng-repeat="deletedItem in allDeleted | orderBy: 'deleted': true" class="group-mixed with-checkbox">
+    <div class="group-mixed with-checkbox"
+      ng-repeat="deletedItem in allDeleted | orderBy: 'deleted': true track by deletedItem.trans.uuid">
       <a href class="group-mixed--middle link-search-result" ng-click="openEditor(deletedItem.tagType ? 'tag' : deletedItem.trans.itemType, deletedItem)">
         <span class="text-search-result" clamp=2 ng-bind="deletedItem.title"></span>
       </a>
