--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -12,8 +12,8 @@
         list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
       <div class="animate-list-item-leave"
         ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
-        | orderBy:getTaskModified:true | limitTo: currentListLimitTo" list-item
-        ng-include="urlBase + 'app/tasks/taskListItem.html'">
+        | orderBy:getTaskModified:true | limitTo: currentListLimitTo track by task.trans.uuid"
+        list-item ng-include="urlBase + 'app/tasks/taskListItem.html'">
       </div>
       <div list-prompt="tasks" list-prompt-infos="listInfos"
         list-prompt-hide="[listItemAddActive, onboardingInProgress]"></div>
