--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -18,13 +18,15 @@
   </div>
 
   <div class="row-vertically-centered"
-    ng-repeat="list in lists | filter:notSelectedList | orderBy:'trans.title'" ng-click="listSelected(list)">
+    ng-repeat="list in lists | filter:notSelectedList | orderBy:'trans.title' track by list.trans.uuid"
+    ng-click="listSelected(list)">
     <a href class="link">
       <span class="text-link" clamp=2>{{::prefix}}{{list.trans.title}}</span>
     </a>
   </div>
 
-  <div class="row-vertically-centered" ng-repeat="archivedList in archivedLists | filter:notSelectedList"
+  <div class="row-vertically-centered"
+    ng-repeat="archivedList in archivedLists | filter:notSelectedList track by archivedList.trans.uuid"
     ng-click="listSelected(archivedList)">
     <a href class="link">
       <span class="text-link" ng-bind="archivedList.trans.title" clamp=2></span>
