--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -39,7 +39,8 @@
         </a>
       </div>
     </div>
-    <div ng-if="favoriteLists.length > 0" class="group-mixed small with-checkbox" ng-repeat="favoriteList in favoriteLists"
+    <div ng-if="favoriteLists.length > 0" class="group-mixed small with-checkbox"
+      ng-repeat="favoriteList in favoriteLists track by favoriteList.trans.uuid"
       ng-hide="favoriteList === getActiveList()">
       <div class="group-mixed--middle">
         <a href class="link-menu-small" ng-click="gotoFeature('list', favoriteList)">
