--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -19,8 +19,8 @@
       ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
       ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
-      | orderBy:'trans.created':true | limitTo: currentListLimitTo" list-item="getContextId()"
-      ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
+      | orderBy:'trans.created':true | limitTo: currentListLimitTo track by task.trans.uuid"
+      list-item="getContextId()" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
     <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('tasks')"></footer>
