--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -21,7 +21,7 @@
     </div>
     <div class="animate-list-item-leave"
       ng-repeat="context in listInfos.array = (getFullArray()) | orderBy:'trans.created':true
-      | limitTo: currentListLimitTo" list-item>
+      | limitTo: currentListLimitTo track by context.trans.uuid" list-item>
       <div class="group-mixed">
         <a href class="group-mixed--middle link-list-item" swiper-click="swipeToContext(context)">
           <span class="text-link" clamp=2 ng-bind="'@' + context.trans.title"></span>
