--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -89,7 +89,7 @@
         <div ng-if="!footerExpandedToMaxHeight" class="keywords-container row">
           <div class="keyword-wrapper"
             ng-repeat="keyword in filteredItems.unselectedKeywords = (keywords | filter:keywordsFilter)
-            | filter:{title:keywordsSearch.text} | orderBy:'trans.title' track by keyword.trans.uuid">
+            | filter:{trans:{title:keywordsSearch.text}} | orderBy:'trans.title' track by keyword.trans.uuid">
             <a href class="keyword link" ng-click="selectKeyword(keyword)">
               <span class="text-keyword" ng-bind="'#' + keyword.trans.title" clamp=1></span>
             </a>
