Fixed a typo that caused a bug in unfavoriting favorited list in menu.

--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -48,7 +48,7 @@
         </a>
       </div>
       <div class="group-mixed--right">
-        <a href ng-click="unfavoriteList(list)">
+        <a href ng-click="unfavoriteList(favoriteList)">
           <span class="icon-star small inverse"></span>
         </a>
       </div>
