--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -14,7 +14,7 @@
     </textarea>
   </div>
   <div class="group-mixed--right">
-    <a href ng-hide="onboardingInProgress" editable-field-deactivate ng-click="openEditor('list', newItem)">
+    <a href class="onboarding-hide" editable-field-deactivate ng-click="openEditor('list', newItem)">
       <span class="text-navigation-forward"></span>
     </a>
   </div>
