--- a/frontend/core/src/main/webapp/static/app/main/toolbar.html
+++ b/frontend/core/src/main/webapp/static/app/main/toolbar.html
@@ -5,7 +5,7 @@
       <span class="icon-menu"></span>
     </button>
     <div class="group-symmetrical--middle" ng-style="{maxWidth: calculateHeadingWidth()}">
-      <a href class="link" ng-class="onboardingInProgress && 'link-disable'" ng-click="clickToolbarHeading()">
+      <a href class="link onboarding-link-disable" ng-click="clickToolbarHeading()">
         <div><span class="text-heading-primary" clamp=2 ng-bind="getCurrentHeading()"></span></div>
       </a>
     </div>
