--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -6,7 +6,7 @@
       icon-checkbox="getUniqueListItemId(task.trans.uuid)">
   </div>
 
-  <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle link-list-item"
+  <a href class="group-mixed--middle link-list-item onboarding-link-disable"
     swiper-click="callAndWaitThenScroll(openTaskEditor, task)">
     <span class="text-link" clamp=2 ng-bind="task.trans.title"></span>
   </a>
