--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -14,7 +14,7 @@
     </textarea>
   </div>
   <div class="group-mixed--right">
-    <a href ng-hide="onboardingInProgress" class="link-navigation" editable-field-deactivate
+    <a href class="link-navigation onboarding-hide" editable-field-deactivate
       ng-click="openTaskEditor(newItem)">
       <span class="text-navigation-forward"></span>
     </a>
