--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -56,7 +56,7 @@
     <div class="container-menu--push"></div>
   </div>
   <div class="container-menu--bottom">
-    <a href ng-if="!onboardingInProgress" class="link-menu height-large row" ng-click="gotoFeature('trash')"
+    <a href class="link-menu height-large row onboarding-hide" ng-click="gotoFeature('trash')"
       ng-class="isFeatureActive('trash') ? 'highlighted' : 'downplayed'">
       <span class="text-navigation-menu-small">trash</h4>
     </a>
