--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed with-checkbox" ng-class="{'checkbox-checked': task.trans.completed}">
+<div class="group-mixed with-checkbox" ng-class="{'checkbox-checked': task.trans.optimisticComplete()}">
 
   <div class="group-mixed--left">
     <input type="checkbox" ng-model="task.trans.optimisticComplete" ng-model-options="{getterSetter: true}"
