Added delay for API response only to index_devel, not jasmine tests

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -21,6 +21,7 @@
   <script src="static/lib/jasmine/jasmine-jquery.js"></script>
 
   <script>
+    var delayMockAPIResponse = true;
     jasmine.getJSONFixtures().fixturesPath = 'test/json';
   </script>
 
