Use transient field when checking for deleted status in editors

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="NoteEditorController" ng-class="note.deleted && 'container-disabled'">
+<div class="container-fluid" ng-controller="NoteEditorController" ng-class="note.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
