--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="TagEditorController" ng-class="tag.deleted && 'container-disabled'">
+<div class="container-fluid" ng-controller="TagEditorController" ng-class="tag.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
