--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="ListEditorController" ng-class="list.deleted && 'container-disabled'">
+<div class="container-fluid" ng-controller="ListEditorController" ng-class="list.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
