--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="ItemEditorController" ng-class="item.deleted && 'container-disabled'">
+<div class="container-fluid" ng-controller="ItemEditorController" ng-class="item.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
