--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="TaskEditorController" ng-class="task.deleted && 'container-disabled'">
+<div class="container-fluid" ng-controller="TaskEditorController" ng-class="task.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
