Set untitled as title when there is no title but there is content

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -13,7 +13,7 @@
 
         <div ng-hide="!isNotePropertyInEdit() && isFirstSlide()" id="noteEditorTitlebarTitle" ng-style="{maxWidth: calculateTitleWidth()}" class="scroll-then-toggle group-symmetrical--middle width-large">
           <a href class="link" ng-click="openNoteTitleEdit()">
-            <div><span class="text-heading-primary" clamp=2 ng-class="!note.trans.title && 'text-downplayed'" ng-bind="note.trans.title ? note.trans.title : 'new note'"></span></div>
+            <div><span class="text-heading-primary" clamp=2 ng-class="!note.trans.title && 'text-downplayed'" ng-bind="note.trans.title && note.trans.title.length ? note.trans.title : 'new note'"></span></div>
           </a>
         </div>
 
@@ -111,7 +111,7 @@
 
             <!-- CONTENT -->
             <div class="row-vertically-centered with-textarea">
-              <textarea ng-class="onboardingInProgress && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-focus="noteContentFocused()" ng-blur="noteContentBlurred()" msd-elastic editable-field ng-trim="false" editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+              <textarea ng-class="onboardingInProgress && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-focus="noteContentFocused()" ng-blur="noteContentBlurred()" msd-elastic editable-field ng-trim="false" editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" ng-keydown="noteContentKeyDown($event)" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
               </textarea>
             </div>
 
