Set focus into title on new note editor.

--- a/frontend/core/src/main/webapp/static/app/notes/notesAll.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesAll.html
@@ -1,5 +1,5 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
-  <section class="container-content" list="allNotes" list-recent list-open="openEditor('note', getNewNote())">
+  <section class="container-content" list="allNotes" list-recent list-open="openEditor('note', getNewNote(), 'new')">
 
     <div ng-show="!onboardingInProgress">
       <h2 class="group-heading justified row">all notes</h2>
