--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -50,7 +50,7 @@
                 </textarea>
               </div>
 
-              <div ng-if="!onboardingInProgress" class="group-mixed--right">
+              <div class="group-mixed--right onboarding-hide">
                 <a href class="link-navigation" ng-click="clickFavorite()">
                   <span class="icon-star large" ng-class="!note.trans.favorited && 'inactive'"></span>
                 </a>
