Moved ng-click from wrapper div into a element in omnibarEditor.html.

--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -1,8 +1,8 @@
 <div class="container-fluid" ng-controller="OmnibarEditorController">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
-      <div class="group-symmetrical height-large" ng-click="closeEditor()">
-        <a href class="group-symmetrical--left link-navigation">
+      <div class="group-symmetrical height-large">
+        <a href class="group-symmetrical--left link-navigation" ng-click="closeEditor()">
           <span class="text-navigation-back">back</span>
         </a>
       </div>
