--- a/frontend/core/src/main/webapp/static/app/entry/tutorial.html
+++ b/frontend/core/src/main/webapp/static/app/entry/tutorial.html
@@ -1,7 +1,7 @@
 <section class="container-content">
   <header class="group-symmetrical">
     <a href class="group-symmetrical--right link-navigation downplayed" ng-click="skipTutorial()">
-      <span class="text-navigation">skip tutorial >></span>
+      <span class="text-navigation-inline">skip tutorial</span><span class="text-navigation-forward-double"></span>
     </a>
   </header>
   <div class="group-instruction">
