--- a/frontend/core/src/main/webapp/static/app/user/userEditor.html
+++ b/frontend/core/src/main/webapp/static/app/user/userEditor.html
@@ -1,7 +1,7 @@
 <form name="userForm" class="container-fluid" ng-controller="UserEditorController">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
-      <div class="group-symmetrical height-large">
+      <div class="group-symmetrical height-large--top">
         <a href class="group-symmetrical--left link-navigation highlighted" ng-click="closeEditor()">
           <span class="text-navigation-back">back</span>
         </a>
