--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -1,4 +1,4 @@
-<div>
+<div class="row-top-parent">
 
   <div ng-if="selectedList" class="group-mixed vertically-centered">
     <a href class="group-mixed--middle link" ng-click="listSelected(selectedList)">
