--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" ng-controller="ItemEditorController" ng-class="item.trans.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
-      <div class="group-symmetrical height-large">
+      <div class="group-symmetrical height-large--top">
         <a href class="group-symmetrical--left link-navigation highlighted" ng-click="endItemEdit()">
           <span class="text-navigation-back" ng-bind="isItemEdited() && !item.deleted ? 'save' : 'back'"></span>
         </a>
